--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,9 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "nodemon": "^1.18.10"
   },
   "scripts": {
