--- a/API/package.json
+++ b/API/package.json
@@ -8,7 +8,8 @@
     "colors": "^1.3.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.19",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "rss-parser": "^3.7.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
