--- a/redCore/package.json
+++ b/redCore/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "string-to-html": "^1.3.4",
     "tslib": "^1.9.0",
